# hutc

./: .env  .gitignore  Cargo.toml  README.md  defs.lua  main.lua  recipes.lua
assets/lua/: hutc.defs.lua
examples/: http_examples.lua
src/: cli.rs  env.rs  expect.rs  fs.rs  http.rs  init.rs  lua.rs  main.rs  registry.rs  update.rs
src/http/: client.rs  mod.rs  req.rs
test/: hutc.defs.lua
tests/: api.lua  http_examples.lua  hutc.defs.lua  web.lua
