[package]
name = "hutc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
mlua = { version = "0.11.6", features = ["async", "lua54"] }
reqwest = { version = "0.13.2", features = ["form", "json", "query"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
