[package]
name = "hutc"
version = "0.1.0"
edition = "2024"
authors = ["Calc hello@vinm.me"]
description = "Simple af rest api testing client using lua"
readme = "README.md"
license = "MIT"
repository = "https://github.com/07calc/hutc"
keywords = ["dev", "rest-api", "testing"]
categories = ["development-tools", "api-testing", "testing"]
exclude = ["/target/*", "*.rs.bk", "*.log", "examples/*"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
mlua = { version = "0.11.6", features = ["async", "lua54"] }
reqwest = { version = "0.13.2", features = ["form", "json", "query"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
